<resources>
    <string name="app_name">AIPersonas</string>
    <string name="signup_header">Create Your Account</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="already_have_account">Already have an account? Sign In</string>

    <!-- Error messages -->
    <string name="error_full_name_required">Full name is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="error_password_match">Passwords do not match</string>


    <!-- Sign Up strings -->


    <!-- Sign In strings -->
    <string name="signin_header">Welcome Back</string>
    <string name="sign_in_button">Sign In</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>


    <!-- Chat strings -->
    <string name="profile_image_desc">Profile Image</string>

    <!-- Persona Card strings -->
    <string name="persona_image_desc">Persona Image</string>
    <string name="last_message_content">Last message content</string>
    <string name="persona_title">Persona Title</string>
    <string name="add_chat">Add Chat</string>
    <string name="conversations">Conversations</string>
    <string name="typing">typing\n</string>

</resources>